AC_PREREQ(2.57)
AC_INIT(sipXconfig-audiocodes, 0.0.4.5.2, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([src/org/sipfoundry/sipxconfig/phone/audiocodesphone/AudioCodesPhone.java])
m4_include([config/sipXlib2.m4])
AM_INIT_AUTOMAKE(foreign tar-ustar)
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  etc/Makefile
])
AC_OUTPUT
