include config/project.am

EXTRA_DIST = \
	BUILDSTAMP \
	SVN-VERSION \
	config/sipX-buildstamp.cpp.in \
	config/sipX-buildstamp.h.in \
	config/sipX-config.in \
	config/svn-version \
	@PACKAGE@-rpmlintrc \
	@PACKAGE@.spec

DISTCLEANFILES = \
        $(CONFIG_DISTCLEANFILES) \
        BUILDSTAMP \
        Makefile.in \
        SVN-VERSION \
        aclocal.m4 \
        autom4te.cache/output.0 \
        autom4te.cache/output.1 \
        autom4te.cache/requests \
        autom4te.cache/traces.0 \
        autom4te.cache/traces.1
